--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Smart Academy - مع مستر إيهاب</title>
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- React + ReactDOM -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <!-- Babel -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -9,28 +18,28 @@ https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script type="text/babel">
       const DATA = {
         "الصف الرابع الابتدائي": [
-          { name: "نهر النيل وأثره على قيام الحضارة", url: "https://example.com/lesson1" },
-          { name: "الأنشطة الاقتصادية في مصر", url: "https://example.com/lesson2" },
+          { title: "نهر النيل وأثره على قيام الحضارة", url: "#" },
+          { title: "الأنشطة الاقتصادية في مصر", url: "#" },
         ],
         "الصف الخامس الابتدائي": [
-          { name: "الحياة الاجتماعية في مصر القديمة", url: "https://example.com/lesson3" },
-          { name: "الأنشطة الاقتصادية في مصر القديمة", url: "https://example.com/lesson4" },
+          { title: "الحياة الاجتماعية في مصر القديمة", url: "#" },
+          { title: "الأنشطة الاقتصادية في مصر القديمة", url: "#" },
         ],
         "الصف السادس الابتدائي": [
-          { name: "قناة السويس وأهميتها", url: "https://example.com/lesson5" },
-          { name: "ثورة 1919", url: "https://example.com/lesson6" },
+          { title: "قناة السويس وأهميتها", url: "#" },
+          { title: "ثورة 1919", url: "#" },
         ],
         "الصف الأول الإعدادي": [
-          { name: "البيئة الصحراوية في مصر", url: "https://example.com/lesson7" },
-          { name: "البيئة الزراعية", url: "https://example.com/lesson8" },
+          { title: "البيئة الصحراوية في مصر", url: "#" },
+          { title: "البيئة الزراعية", url: "#" },
         ],
         "الصف الثاني الإعدادي": [
-          { name: "محمد علي وبناء الدولة الحديثة", url: "https://example.com/lesson9" },
-          { name: "تطور التعليم في مصر", url: "https://example.com/lesson10" },
+          { title: "محمد علي وبناء الدولة الحديثة", url: "#" },
+          { title: "تطور التعليم في مصر", url: "#" },
         ],
         "الصف الثالث الإعدادي": [
-          { name: "ثورة يوليو 1952", url: "https://example.com/lesson11" },
-          { name: "الخريطة السياسية للوطن العربي", url: "https://example.com/lesson12" },
+          { title: "ثورة يوليو 1952", url: "#" },
+          { title: "الخريطة السياسية للوطن العربي", url: "#" },
         ],
       };
 
@@ -39,7 +48,7 @@ https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
           <div className="rounded-2xl bg-white/20 backdrop-blur-lg border border-white/30 shadow-lg overflow-hidden">
             <button
               onClick={onClick}
-              className="w-full flex justify-between items-center px-5 py-4 text-white font-bold text-lg hover:bg-white/10 transition"
+              className="w-full flex justify-between items-center px-4 py-4 text-white font-bold text-xl sm:text-2xl hover:bg-white/10 transition"
             >
               {grade}
               <span className={`transform transition ${isOpen ? "rotate-180" : ""}`}>⌄</span>
@@ -50,11 +59,9 @@ https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
                   <a
                     key={i}
                     href={lesson.url}
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    className="block px-6 py-3 text-sm text-gray-100 hover:bg-white/20 cursor-pointer"
+                    className="block px-5 py-3 text-base sm:text-lg text-gray-100 hover:bg-white/20 cursor-pointer"
                   >
-                    📘 {lesson.name}
+                    📘 {lesson.title}
                   </a>
                 ))}
               </div>
@@ -64,3 +71,36 @@ https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
       }
 
       function App() {
+        const [openGrade, setOpenGrade] = React.useState(null);
+
+        return (
+          <div className="max-w-5xl mx-auto px-3 py-6 sm:py-10">
+            <header className="mb-10 text-center text-white">
+              <h1 className="text-4xl sm:text-6xl font-extrabold drop-shadow-lg">
+                Smart <span className="text-yellow-300">Academy</span>
+              </h1>
+              <p className="text-gray-100 mt-4 text-lg sm:text-2xl">
+                متعة التعلم والمعرفة مع - مستر إيهاب أشرف 
+              </p>
+            </header>
+
+            <div className="grid grid-cols-1 sm:grid-cols-2 gap-6">
+              {Object.entries(DATA).map(([grade, lessons]) => (
+                <GradeCard
+                  key={grade}
+                  grade={grade}
+                  lessons={lessons}
+                  isOpen={openGrade === grade}
+                  onClick={() => setOpenGrade(openGrade === grade ? null : grade)}
+                />
+              ))}
+            </div>
+          </div>
+        );
+      }
+
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render(<App />);
+    </script>
+  </body>
+</html>
