--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
     <!-- Babel -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <style>
+      /* Animation للعنوان */
+      @keyframes fadeZoom {
+        0% {
+          opacity: 0;
+          transform: scale(0.8);
+        }
+        100% {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+      .fade-zoom {
+        animation: fadeZoom 1.5s ease-out forwards;
+      }
+    </style>
   </head>
   <body class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 min-h-screen">
     <div id="root"></div>
@@ -51,9 +67,19 @@
               className="w-full flex justify-between items-center px-4 py-4 text-white font-bold text-xl sm:text-2xl hover:bg-white/10 transition"
             >
               {grade}
-              <span className={`transform transition ${isOpen ? "rotate-180" : ""}`}>⌄</span>
+              <span
+                className={`transform transition-transform duration-300 ${
+                  isOpen ? "rotate-180" : ""
+                }`}
+              >
+                ⌄
+              </span>
             </button>
-            {isOpen && (
+            <div
+              className={`transition-all duration-500 ease-in-out overflow-hidden ${
+                isOpen ? "max-h-96 opacity-100" : "max-h-0 opacity-0"
+              }`}
+            >
               <div className="bg-white/10 border-t border-white/20">
                 {lessons.map((lesson, i) => (
                   <a
@@ -65,7 +91,7 @@
                   </a>
                 ))}
               </div>
-            )}
+            </div>
           </div>
         );
       }
@@ -76,11 +102,11 @@
         return (
           <div className="max-w-5xl mx-auto px-3 py-6 sm:py-10">
             <header className="mb-10 text-center text-white">
-              <h1 className="text-4xl sm:text-6xl font-extrabold drop-shadow-lg">
+              <h1 className="fade-zoom text-4xl sm:text-6xl font-extrabold drop-shadow-lg">
                 Smart <span className="text-yellow-300">Academy</span>
               </h1>
-              <p className="text-gray-100 mt-4 text-lg sm:text-2xl">
-                متعة التعلم والمعرفة مع - مستر إيهاب أشرف 
+              <p className="fade-zoom text-gray-100 mt-4 text-lg sm:text-2xl">
+                متعة التعلم و المعرفة مع - مستر إيهاب أشرف 
               </p>
             </header>
 
@@ -91,7 +117,9 @@
                   grade={grade}
                   lessons={lessons}
                   isOpen={openGrade === grade}
-                  onClick={() => setOpenGrade(openGrade === grade ? null : grade)}
+                  onClick={() =>
+                    setOpenGrade(openGrade === grade ? null : grade)
+                  }
                 />
               ))}
             </div>
