--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script type="text/babel">
       const DATA = {
         "الصف الرابع الابتدائي": [
-          { title: "نهر النيل وأثره على قيام الحضارة", url: "#" },
+          { title: "الكتاب المدرسي - دراسات اجتماعية", url: "https://elearnningcontent.blob.core.windows.net/elearnningcontent/2026/Primary/Primary4/Term1/StudentBook/Social_prim4_T1.pdf" },
           { title: "الأنشطة الاقتصادية في مصر", url: "#" },
         ],
         "الصف الخامس الابتدائي": [
