--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/babel">
       const DATA = {
         "الصف الرابع الابتدائي": [
-          { name: "الكتاب المدرسي - دراسات اجتماعية", link: "https://elearnningcontent.blob.core.windows.net/elearnningcontent/2026/Primary/Primary4/Term1/StudentBook/Social_prim4_T1.pdf" },
+          { name: "كتاب الشاطر - دراسات اجتماعية", link: "https://drive.google.com/file/d/1MNW-F6AQSTGBGj7Fh1ni5rDnaGdVVEcK/view?pli=1" },
           { name: "الأنشطة الاقتصادية في مصر", link: "https://example.com/economy" },
         ],
         "الصف الخامس الابتدائي": [
