--- a/index.html
+++ b/index.html
@@ -1,181 +1,165 @@
-<!doctype html>
-
-<html lang="ar" dir="rtl">
+<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>مستر إيهاب أشرف - دروس التاريخ والجغرافيا</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>مستر إيهاب أشرف - تاريخ وجغرافيا</title>
   <style>
-    :root{
-      --blue-1:#0ea5ff;
-      --blue-2:#0866d8;
-      --bg:linear-gradient(180deg,#7b5c3b,#c2a87a);
-      --card:#ffffff;
-      --muted:#6b7280;
-      --radius:14px;
+    body {
+      margin: 0;
       font-family: 'Cairo', sans-serif;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:#0b1220;position:relative;overflow-x:hidden}/* خلفية رموز هيروغليفية شبه شفافة */
-body::before{
-  content:"";
-  position:absolute;inset:0;
-  background-image:url('https://upload.wikimedia.org/wikipedia/commons/3/3f/Hieroglyphs_from_the_tomb_of_Seti_I.jpg');
-  background-size:cover;
-  background-repeat:repeat;
-  opacity:0.08;
-  pointer-events:none;
+      background: linear-gradient(135deg, #8e0e00, #e52d27); /* أحمر عصري متدرج */
+      color: #fff;
+      background-attachment: fixed;
+      background-size: cover;
+    }header {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
 }
 
-.container{max-width:1100px;margin:30px auto;padding:0 18px;position:relative;z-index:1}
-
-/* header */
-header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:22px}
-.brand{display:flex;align-items:center;gap:12px}
-.logo{width:48px;height:48px;border-radius:12px;background:linear-gradient(135deg,#a17549,#c2a87a);display:flex;align-items:center;justify-content:center;color:white;font-weight:700}
-.search{flex:1;display:flex;align-items:center}
-.search input{width:100%;padding:10px 14px;border-radius:10px;border:1px solid #e6eefc;background:white}
-
-/* hero */
-.hero{background:rgba(255,255,255,0.1);backdrop-filter:blur(6px);color:white;border-radius:18px;padding:48px 28px;box-shadow:0 8px 30px rgba(0,0,0,0.25);margin-bottom:28px}
-.hero-grid{display:grid;grid-template-columns:1fr 320px;gap:18px;align-items:center}
-.hero h1{font-size:36px;margin:0 0 12px}
-.hero p{margin:0 0 20px;opacity:0.95}
-.hero .cta{display:flex;gap:12px}
-.btn{padding:12px 18px;border-radius:10px;border:0;cursor:pointer;font-weight:600}
-.btn.ghost{background:rgba(255,255,255,0.12);color:white}
-.btn.primary{background:white;color:#7b5c3b}
-.stats{display:flex;gap:18px;margin-top:22px}
-.stat{display:flex;flex-direction:column;align-items:center;padding:10px 12px;border-radius:12px;background:rgba(255,255,255,0.15)}
-.stat strong{font-size:18px}
-
-/* sections */
-.section{background:var(--card);border-radius:16px;padding:26px;margin-bottom:26px}
-.section h2{margin:0 0 12px}
-.grid{display:grid;grid-template-columns:repeat(4,1fr);gap:16px}
-.card{background:linear-gradient(180deg,white,#fbfdff);padding:18px;border-radius:12px;display:flex;align-items:center;gap:14px;box-shadow:0 6px 20px rgba(15,36,63,0.08);border:1px solid #eef6ff}
-.card .icon{width:56px;height:56px;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:700}
-.card .meta{flex:1}
-.card .meta h3{margin:0;font-size:16px}
-.card .meta p{margin:6px 0 0;color:var(--muted);font-size:13px}
-
-/* responsive */
-@media(max-width:980px){
-  .hero-grid{grid-template-columns:1fr}
-  .grid{grid-template-columns:repeat(2,1fr)}
+header h1 {
+  font-size: 20px;
+  margin: 0;
 }
-@media(max-width:520px){
-  header{flex-direction:column;align-items:flex-start}
-  .grid{grid-template-columns:1fr}
-  .hero h1{font-size:26px}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 15px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.hero {
+  text-align: center;
+  padding: 60px 20px;
+}
+
+.hero h2 {
+  font-size: 28px;
+  margin-bottom: 15px;
+}
+
+.hero p {
+  font-size: 18px;
+}
+
+.stats {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 40px 0;
+}
+
+.stat {
+  background: rgba(255, 255, 255, 0.1);
+  padding: 20px;
+  border-radius: 12px;
+  min-width: 120px;
+  text-align: center;
+}
+
+.subjects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card h3 {
+  margin: 10px 0;
+}
+
+footer {
+  background: rgba(0, 0, 0, 0.7);
+  text-align: center;
+  padding: 15px;
+  margin-top: 40px;
+}
+
+/* للموبايل */
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .hero h2 {
+    font-size: 22px;
+  }
+
+  .hero p {
+    font-size: 16px;
+  }
 }
 
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <div class="brand">
-        <div class="logo">م.إ</div>
-        <div>
-          <div style="font-weight:700">مستر إيهاب أشرف</div>
-          <div style="font-size:12px;color:var(--muted)">دروس التاريخ والجغرافيا</div>
-        </div>
-      </div>
-      <div class="search">
-        <input placeholder="ابحث عن دروس التاريخ والجغرافيا...">
-      </div>
-      <div style="display:flex;gap:10px;align-items:center">
-        <button class="btn ghost">تسجيل الدخول</button>
-        <button class="btn primary">انضم الآن</button>
-      </div>
-    </header><section class="hero">
-  <div class="hero-grid">
-    <div>
-      <h1>تعلم التاريخ والجغرافيا<br>مع مستر إيهاب أشرف</h1>
-      <p>أفضل شروحات التاريخ والجغرافيا للثانوية العامة مع خبرة أكثر من 15 عامًا في التدريس.</p>
-
-      <div class="cta">
-        <button class="btn ghost">شاهد الدروس</button>
-        <button class="btn primary">ابدأ الآن</button>
-      </div>
-
-      <div class="stats" aria-hidden>
-        <div class="stat"><div style="font-size:12px">500+</div><strong>درس مسجل</strong></div>
-        <div class="stat"><div style="font-size:12px">25K+</div><strong>طالب ناجح</strong></div>
-        <div class="stat"><div style="font-size:12px">15+</div><strong>سنة خبرة</strong></div>
-      </div>
+  <header>
+    <h1>مستر إيهاب أشرف</h1>
+    <nav>
+      <ul>
+        <li><a href="#">الرئيسية</a></li>
+        <li><a href="#">الدروس</a></li>
+        <li><a href="#">عن المدرس</a></li>
+      </ul>
+    </nav>
+  </header>  <section class="hero">
+    <h2>تعلم التاريخ والجغرافيا مع مستر إيهاب أشرف</h2>
+    <p>أفضل شروحات التاريخ والجغرافيا للثانوية العامة مع خبرة أكثر من 15 عامًا في التدريس</p>
+  </section>  <section class="stats">
+    <div class="stat">
+      <h3>500+</h3>
+      <p>درس مسجل</p>
     </div>
-
-    <div style="display:flex;align-items:center;justify-content:center">
-      <!-- placeholder for hero illustration -->
-      <svg width="240" height="180" viewBox="0 0 240 180" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect rx="16" width="240" height="180" fill="rgba(255,255,255,0.12)" />
-        <g fill="white" opacity="0.9">
-          <rect x="24" y="28" width="192" height="12" rx="6" />
-          <rect x="24" y="58" width="160" height="10" rx="5" />
-          <rect x="24" y="86" width="120" height="10" rx="5" />
-          <circle cx="200" cy="140" r="22" stroke="white" stroke-opacity="0.9" stroke-width="3" fill="transparent"/>
-        </g>
-      </svg>
+    <div class="stat">
+      <h3>25K+</h3>
+      <p>طالب ناجح</p>
     </div>
-  </div>
-</section>
-
-<section class="section">
-  <h2>المواد والموضوعات</h2>
-  <p style="color:var(--muted);margin-top:6px">اختر من بين دروس التاريخ والجغرافيا المنظمة حسب الموضوعات والفترات التاريخية</p>
-
-  <div class="grid" style="margin-top:16px">
-    <div class="card">
-      <div class="icon" style="background:#ffd89b">👑</div>
-      <div class="meta"><h3>التاريخ القديم</h3><p>45 درس</p></div>
+    <div class="stat">
+      <h3>15+</h3>
+      <p>سنة خبرة</p>
     </div>
-
-    <div class="card">
-      <div class="icon" style="background:#bde0fe">⏱️</div>
-      <div class="meta"><h3>التاريخ الحديث</h3><p>38 درس</p></div>
-    </div>
-
-    <div class="card">
-      <div class="icon" style="background:#c3f6d9">🌍</div>
-      <div class="meta"><h3>الجغرافيا الطبيعية</h3><p>42 درس</p></div>
-    </div>
-
-    <div class="card">
-      <div class="icon" style="background:#e7d7ff">🧭</div>
-      <div class="meta"><h3>الجغرافيا البشرية</h3><p>35 درس</p></div>
-    </div>
-
-    <div class="card">
-      <div class="icon" style="background:#ffd0d0">🏛️</div>
-      <div class="meta"><h3>الحضارات</h3><p>28 درس</p></div>
-    </div>
-
-    <div class="card">
-      <div class="icon" style="background:#d6f0ff">📘</div>
-      <div class="meta"><h3>التاريخ الإسلامي</h3><p>52 درس</p></div>
-    </div>
-
-    <div class="card">
-      <div class="icon" style="background:#ffeed6">🗺️</div>
-      <div class="meta"><h3>الخرائط</h3><p>25 درس</p></div>
-    </div>
-
-    <div class="card">
-      <div class="icon" style="background:#e6e6e6">🏙️</div>
-      <div class="meta"><h3>المدن والعواصم</h3><p>31 درس</p></div>
-    </div>
-  </div>
-
-  <div style="text-align:center;margin-top:18px">
-    <button class="btn ghost">عرض جميع الموضوعات</button>
-  </div>
-</section>
-
-<footer style="text-align:center;color:var(--muted);font-size:14px;padding:18px 0">© 2025 مستر إيهاب أشرف — كل الحقوق محفوظة</footer>
-
-  </div>
+  </section>  <section class="subjects">
+    <div class="card"><h3>التاريخ القديم</h3><p>45 درس</p></div>
+    <div class="card"><h3>التاريخ الحديث</h3><p>38 درس</p></div>
+    <div class="card"><h3>الجغرافيا الطبيعية</h3><p>42 درس</p></div>
+    <div class="card"><h3>الجغرافيا البشرية</h3><p>35 درس</p></div>
+    <div class="card"><h3>الحضارات</h3><p>28 درس</p></div>
+    <div class="card"><h3>التاريخ الإسلامي</h3><p>52 درس</p></div>
+    <div class="card"><h3>الخرائط</h3><p>25 درس</p></div>
+    <div class="card"><h3>المدن والعواصم</h3><p>31 درس</p></div>
+  </section>  <footer>
+    <p>© 2025 مستر إيهاب أشرف - جميع الحقوق محفوظة</p>
+  </footer>
 </body>
 </html>
