--- a/index.html
+++ b/index.html
@@ -1,165 +1,116 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>مستر إيهاب أشرف - تاريخ وجغرافيا</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Cairo', sans-serif;
-      background: linear-gradient(135deg, #8e0e00, #e52d27); /* أحمر عصري متدرج */
-      color: #fff;
-      background-attachment: fixed;
-      background-size: cover;
-    }header {
-  background: rgba(0, 0, 0, 0.6);
-  padding: 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-}
-
-header h1 {
-  font-size: 20px;
-  margin: 0;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 15px;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.hero {
-  text-align: center;
-  padding: 60px 20px;
-}
-
-.hero h2 {
-  font-size: 28px;
-  margin-bottom: 15px;
-}
-
-.hero p {
-  font-size: 18px;
-}
-
-.stats {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin: 40px 0;
-}
-
-.stat {
-  background: rgba(255, 255, 255, 0.1);
-  padding: 20px;
-  border-radius: 12px;
-  min-width: 120px;
-  text-align: center;
-}
-
-.subjects {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-  padding: 20px;
-}
-
-.card {
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 12px;
-  padding: 20px;
-  text-align: center;
-  transition: transform 0.3s;
-}
-
-.card:hover {
-  transform: scale(1.05);
-}
-
-.card h3 {
-  margin: 10px 0;
-}
-
-footer {
-  background: rgba(0, 0, 0, 0.7);
-  text-align: center;
-  padding: 15px;
-  margin-top: 40px;
-}
-
-/* للموبايل */
-@media (max-width: 768px) {
-  header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  nav ul {
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .hero h2 {
-    font-size: 22px;
-  }
-
-  .hero p {
-    font-size: 16px;
-  }
-}
-
-  </style>
+  <title>طلاب مستر إيهاب</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <h1>مستر إيهاب أشرف</h1>
-    <nav>
-      <ul>
-        <li><a href="#">الرئيسية</a></li>
-        <li><a href="#">الدروس</a></li>
-        <li><a href="#">عن المدرس</a></li>
-      </ul>
-    </nav>
-  </header>  <section class="hero">
-    <h2>تعلم التاريخ والجغرافيا مع مستر إيهاب أشرف</h2>
-    <p>أفضل شروحات التاريخ والجغرافيا للثانوية العامة مع خبرة أكثر من 15 عامًا في التدريس</p>
-  </section>  <section class="stats">
-    <div class="stat">
-      <h3>500+</h3>
-      <p>درس مسجل</p>
+<body class="bg-gray-50 text-gray-900">
+
+  <!-- Header -->
+  <header class="bg-white shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
+      <div class="flex items-center space-x-2">
+        <span class="text-xl font-bold text-blue-600">طلاب مستر إيهاب</span>
+      </div>
+      <div class="flex-1 mx-6">
+        <input type="text" placeholder="ابحث عن دروس التاريخ والجغرافيا..."
+               class="w-full rounded-lg border border-gray-300 px-4 py-2 focus:ring-2 focus:ring-blue-400">
+      </div>
+      <div class="flex items-center space-x-4">
+        <button class="text-blue-600">🔔</button>
+        <button class="text-blue-600">👤</button>
+      </div>
     </div>
-    <div class="stat">
-      <h3>25K+</h3>
-      <p>طالب ناجح</p>
+  </header>
+
+  <!-- Hero -->
+  <section class="bg-gradient-to-r from-blue-600 to-blue-400 text-white py-16">
+    <div class="max-w-7xl mx-auto px-6 text-center">
+      <h1 class="text-4xl sm:text-5xl font-extrabold mb-4">تعلم التاريخ والجغرافيا مع مستر إيهاب أشرف</h1>
+      <p class="text-lg sm:text-xl mb-6">أفضل شروحات التاريخ والجغرافيا للثانوية العامة بخبرة أكثر من 15 عامًا في التدريس</p>
+      <button class="bg-white text-blue-600 font-bold px-6 py-3 rounded-lg shadow hover:scale-105 transition">ابدأ الدروس</button>
+
+      <!-- إحصائيات -->
+      <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 mt-12">
+        <div class="bg-white text-blue-600 rounded-lg p-6 shadow font-bold">+500 درس</div>
+        <div class="bg-white text-blue-600 rounded-lg p-6 shadow font-bold">+25K طالب</div>
+        <div class="bg-white text-blue-600 rounded-lg p-6 shadow font-bold">+15 سنة خبرة</div>
+      </div>
+
+      <!-- صورة -->
+      <div class="mt-10">
+        <img src="https://via.placeholder.com/800x300" alt="طلاب" class="mx-auto rounded-lg shadow-lg">
+      </div>
     </div>
-    <div class="stat">
-      <h3>15+</h3>
-      <p>سنة خبرة</p>
+  </section>
+
+  <!-- المواد -->
+  <section class="max-w-7xl mx-auto px-6 py-12">
+    <h2 class="text-2xl font-bold mb-6 text-center">المواد والموضوعات</h2>
+    <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-6 gap-6 text-center">
+      <div class="bg-yellow-100 p-4 rounded-lg shadow hover:scale-105 transition">
+        <span class="text-2xl">🏛️</span>
+        <p class="mt-2 font-bold">التاريخ القديم</p>
+      </div>
+      <div class="bg-blue-100 p-4 rounded-lg shadow hover:scale-105 transition">
+        <span class="text-2xl">🕰️</span>
+        <p class="mt-2 font-bold">التاريخ الحديث</p>
+      </div>
+      <div class="bg-green-100 p-4 rounded-lg shadow hover:scale-105 transition">
+        <span class="text-2xl">🌍</span>
+        <p class="mt-2 font-bold">الجغرافيا الطبيعية</p>
+      </div>
+      <div class="bg-purple-100 p-4 rounded-lg shadow hover:scale-105 transition">
+        <span class="text-2xl">👥</span>
+        <p class="mt-2 font-bold">الجغرافيا البشرية</p>
+      </div>
+      <div class="bg-pink-100 p-4 rounded-lg shadow hover:scale-105 transition">
+        <span class="text-2xl">🕌</span>
+        <p class="mt-2 font-bold">التاريخ الإسلامي</p>
+      </div>
+      <div class="bg-red-100 p-4 rounded-lg shadow hover:scale-105 transition">
+        <span class="text-2xl">🏙️</span>
+        <p class="mt-2 font-bold">المدن والعواصم</p>
+      </div>
     </div>
-  </section>  <section class="subjects">
-    <div class="card"><h3>التاريخ القديم</h3><p>45 درس</p></div>
-    <div class="card"><h3>التاريخ الحديث</h3><p>38 درس</p></div>
-    <div class="card"><h3>الجغرافيا الطبيعية</h3><p>42 درس</p></div>
-    <div class="card"><h3>الجغرافيا البشرية</h3><p>35 درس</p></div>
-    <div class="card"><h3>الحضارات</h3><p>28 درس</p></div>
-    <div class="card"><h3>التاريخ الإسلامي</h3><p>52 درس</p></div>
-    <div class="card"><h3>الخرائط</h3><p>25 درس</p></div>
-    <div class="card"><h3>المدن والعواصم</h3><p>31 درس</p></div>
-  </section>  <footer>
-    <p>© 2025 مستر إيهاب أشرف - جميع الحقوق محفوظة</p>
+  </section>
+
+  <!-- أحدث الدروس -->
+  <section class="bg-gray-100 py-12">
+    <div class="max-w-7xl mx-auto px-6">
+      <h2 class="text-2xl font-bold mb-6 text-center">أحدث دروس التاريخ والجغرافيا</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="bg-white rounded-lg shadow hover:shadow-lg transition overflow-hidden">
+          <div class="bg-gray-200 h-40"></div>
+          <div class="p-4">
+            <h3 class="font-bold mb-2">الحضارة المصرية القديمة – الدرس الأول</h3>
+            <p class="text-sm text-gray-600">مدة الفيديو: 52 دقيقة</p>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow hover:shadow-lg transition overflow-hidden">
+          <div class="bg-gray-200 h-40"></div>
+          <div class="p-4">
+            <h3 class="font-bold mb-2">جغرافيا مصر الطبيعية – النيل والفيضان</h3>
+            <p class="text-sm text-gray-600">مدة الفيديو: 1 ساعة</p>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow hover:shadow-lg transition overflow-hidden">
+          <div class="bg-gray-200 h-40"></div>
+          <div class="p-4">
+            <h3 class="font-bold mb-2">التاريخ الحديث – الحملة الفرنسية</h3>
+            <p class="text-sm text-gray-600">مدة الفيديو: 45 دقيقة</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-blue-600 text-white text-center p-6 mt-12">
+    &copy; 2025 طلاب مستر إيهاب | الهاتف: 01559116736
   </footer>
+
 </body>
 </html>
